feat: pages of the components

--- a/assets/pages/ped-form.html
+++ b/assets/pages/ped-form.html
@@ -24,5 +24,7 @@
     
         <label for="info" class="label">'Tamanho do pé'</label>
         <input type="text" class="input" />
+
+        <label></label>
     </form>
 </html>
