--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="global.css"/>
     <title>Stocks</title>
 </head>
 <body>
     <div class="bg-2">
             <header id="header" class="bg-1">
-                <h1>Bitrensttfy</h1>
+                <h1>Bitrensttofy</h1>
                 <h3>Seus pés cada vez mais confortáveis...</h3>
 
                 <ul>
@@ -19,9 +19,13 @@
                     <li>about</li>
                     <li>contact</li>
                 </ul>
-                <button class="btn btn-primary" style="color: black;">Sign Up</button>
-                <button class="btn btn-primary" style="color: black;">Log Up</button>
+
+                <div class="buttons-log">
+                    <button class="btn btn-primary" style="color: black;">Sign Up</button>
+                    <button class="btn btn-primary" style="color: black;">Log Up</button>
+                </div>
             </header>
+
             <main>
                 <div class="grid bg-photo">
                     <img class="photo-2" src="media/meias.jpg" alt="" width="100%">
@@ -40,6 +44,6 @@
             <footer id="footer" class="bg-1">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae nemo labore ipsum excepturi illo quisquam expedita voluptates at architecto, autem dicta doloremque iure ullam, minima iusto neque quam quod necessitatibus possimus ab hic voluptate!</p>
             </footer>
-        </div>
+    </div>
 </body>
 </html>
