feat: first check

--- a/index.html
+++ b/index.html
@@ -8,42 +8,45 @@
     <title>Stocks</title>
 </head>
 <body>
-    <div class="bg-2">
-            <header id="header" class="bg-1">
-                <h1>Bitrensttofy</h1>
-                <h3>Seus pés cada vez mais confortáveis...</h3>
+    <div>
+        <header>
+            <h1>Bitrensttofy</h1>
+            <h3>Seus pés cada vez mais confortáveis...</h3>
 
+            <nav>
                 <ul>
-                    <li>menu</li>
-                    <li>products</li>
-                    <li>about</li>
-                    <li>contact</li>
+                    <li class="btn nav-item">menu</li>
+                    <li class="btn nav-item">products</li>
+                    <li class="btn nav-item">about</li>
+                    <li class="btn nav-item">contact</li>
                 </ul>
+            </nav>
 
-                <div class="buttons-log">
-                    <button class="btn btn-primary" style="color: black;">Sign Up</button>
-                    <button class="btn btn-primary" style="color: black;">Log Up</button>
-                </div>
-            </header>
+            <div class="buttons-log">
+                <button class="btn isBtnLog">Log Up</button>
+                <button class="btn isBtnCad">Sign Up</button>
+            </div>
+        </header>
 
-            <main>
-                <div class="grid bg-photo">
-                    <img class="photo-2" src="media/meias.jpg" alt="" width="100%">
-                        <div class="info">
-                            <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempori bus eius iure nam in exercitationem perspiciatis expedita ea quibusdam earum vero.</p>
-                            <buttom class="btn btn-see">Ver mais</buttom>
-                        </div>
-                </div>
-                <div class="extra-photos">
-                    <img class="photo-3" src="media/meiasolo.jpg" alt="" width="100%">
-                    <img class="photo-4" src="media/meiacoffee.jpg" alt="" width="100%">
-                    <buttom class="btn btn-buy">Compre aqui!</buttom>
-                </div>
-            </main>
-            
-            <footer id="footer" class="bg-1">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae nemo labore ipsum excepturi illo quisquam expedita voluptates at architecto, autem dicta doloremque iure ullam, minima iusto neque quam quod necessitatibus possimus ab hic voluptate!</p>
-            </footer>
+        <main>
+            <div class="container">
+                <img src="assets/src/meias.jpg" alt="" width="100%">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempori bus eius iure nam in exercitationem perspiciatis expedita ea quibusdam earum vero.</p>
+                        <buttom class="btn btn-see">Ver mais</buttom>
+                    </div>
+            </div>
+
+            <div>
+                <img src="assets/src/meiasolo.jpg" alt="" width="100%">
+                <img src="assets/src/meiacoffee.jpg" alt="" width="100%">
+                <buttom class="btn btn-buy">Compre aqui!</buttom>
+            </div>
+        </main>
+        
+        <footer>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae nemo labore ipsum excepturi illo quisquam expedita voluptates at architecto, autem dicta doloremque iure ullam, minima iusto neque quam quod necessitatibus possimus ab hic voluptate!</p>
+        </footer>
     </div>
 </body>
 </html>
