--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css"/>
+    <link rel="stylesheet" href="_global.css"/>
     <link rel="stylesheet" href="header.css">
     <title>Stocks</title>
 </head>
+
 <body>
     <div>
         <header>
@@ -34,14 +35,14 @@
                 <img src="assets/src/meias.jpg" alt="" width="100%">
                     <div class="description">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempori bus eius iure nam in exercitationem perspiciatis expedita ea quibusdam earum vero.</p>
-                        <buttom class="btn btn-see">Ver mais</buttom>
+                        <button class="btn btn-see">Ver mais</button>
                     </div>
             </div>
 
             <div>
                 <img src="assets/src/meiasolo.jpg" alt="" width="100%">
                 <img src="assets/src/meiacoffee.jpg" alt="" width="100%">
-                <buttom class="btn btn-buy">Compre aqui!</buttom>
+                <button class="btn btn-buy">Compre aqui!</button>
             </div>
         </main>
         
