fix: organization the sass and css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_global.css"/>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="global.css"/>
     <title>Stocks</title>
 </head>
 
@@ -32,7 +31,7 @@
 
         <main>
             <div class="container">
-                <img src="assets/src/meias.jpg" alt="" width="100%">
+                <img src="assets/src/img/meias.jpg" alt="" width="100%">
                     <div class="description">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempori bus eius iure nam in exercitationem perspiciatis expedita ea quibusdam earum vero.</p>
                         <button class="btn btn-see">Ver mais</button>
@@ -40,8 +39,8 @@
             </div>
 
             <div>
-                <img src="assets/src/meiasolo.jpg" alt="" width="100%">
-                <img src="assets/src/meiacoffee.jpg" alt="" width="100%">
+                <img src="assets/src/img/meiasolo.jpg" alt="" width="100%">
+                <img src="assets/src/img/meiacoffee.jpg" alt="" width="100%">
                 <button class="btn btn-buy">Compre aqui!</button>
             </div>
         </main>
