feat: header_main

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         </header>
 
         <main>
-            <div class="container">
-                <img src="assets/src/img/meias.jpg" alt="" width="100%">
+            <div class="container grid">
+                <img src="assets/src/img/meias.jpg" alt="" width="100%" />
                     <div class="description">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempori bus eius iure nam in exercitationem perspiciatis expedita ea quibusdam earum vero.</p>
-                        <button class="btn btn-see">Ver mais</button>
                     </div>
+                <button class="btn btn-see">Ver mais</button>
             </div>
 
             <div>
